feat: Introduce initial HTML structure and comprehensive CSS styling for the application.

--- a/www/index.html
+++ b/www/index.html
@@ -92,6 +92,13 @@
         <main id="pantryView" class="view-section hidden">
             <section class="control-card">
                 <div class="search-section">
+                    <button id="resetPantryBtn" class="icon-btn danger-icon" title="Reset Pantry Data">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2">
+                            <line x1="18" y1="6" x2="6" y2="18"></line>
+                            <line x1="6" y1="6" x2="18" y2="18"></line>
+                        </svg>
+                    </button>
                     <div class="search-bar">
                         <svg class="search-icon" width="20" height="20" viewBox="0 0 24 24" fill="none"
                             stroke="currentColor" stroke-width="2">
@@ -130,8 +137,7 @@
                         <button id="addItemBtn" style="flex: 1;">Add</button>
                     </div>
                 </div>
-                <button id="resetPantryBtn" class="danger-btn" style="width: 100%; margin-top: 10px;">Reset Pantry
-                    Data</button>
+
             </section>
 
             <section id="freezerSection" class="transactions-list">
