--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Sam's Simple App</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
     <link rel="icon" type="image/png" href="favicon.png">
 </head>
 
@@ -18,7 +18,6 @@
                 <button id="navBudget" class="nav-btn active">Budget</button>
                 <button id="navPantry" class="nav-btn">Pantry</button>
             </div>
-
             <div class="header-actions">
                 <button id="viewBtn" class="icon-btn" title="Toggle View">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -37,7 +36,6 @@
                 </button>
             </div>
         </header>
-
         <!-- BUDGET VIEW -->
         <main id="budgetView" class="view-section">
             <div class="left-group">
@@ -54,7 +52,6 @@
                             <span>Monthly Budget</span>
                             <span id="budgetDisplay">$0.00</span>
                         </div>
-                        <!-- Hidden input for editing budget -->
                         <div class="budget-edit hidden" id="budgetEdit">
                             <input type="number" id="budgetInput" placeholder="Set Budget">
                             <button id="saveBudgetBtn">Save</button>
@@ -63,7 +60,6 @@
                         <button id="editBudgetBtn" class="text-btn">Edit</button>
                     </div>
                 </section>
-
                 <section class="add-entry-section">
                     <div class="input-group">
                         <input type="text" id="descInput" placeholder="What was it for?">
@@ -74,20 +70,12 @@
                     </div>
                 </section>
             </div>
-
             <section class="transactions-list">
                 <h2>Recent Entries</h2>
                 <ul id="entriesList">
-                    <!-- Entries will appear here -->
                 </ul>
             </section>
-
-
-
-
-
         </main>
-
         <!-- PANTRY VIEW -->
         <main id="pantryView" class="view-section hidden">
             <section class="control-card">
@@ -108,7 +96,6 @@
                         <input type="text" id="searchInput" placeholder="Search pantry...">
                     </div>
                 </div>
-
                 <div class="add-entry-section">
                     <div class="input-group">
                         <input type="text" id="itemInput" placeholder="Item Name (e.g. Chicken Breast)">
@@ -137,21 +124,19 @@
                         <button id="addItemBtn" style="flex: 1;">Add</button>
                     </div>
                 </div>
-
             </section>
-
-            <section id="freezerSection" class="transactions-list">
-                <h2>Freezer</h2>
-                <ul id="freezerList" class="pantry-list"></ul>
-            </section>
-
-            <section id="pantrySection" class="transactions-list">
-                <h2>Pantry</h2>
-                <ul id="pantryList" class="pantry-list"></ul>
-            </section>
+            <div class="lists-wrapper">
+                <section id="freezerSection" class="transactions-list">
+                    <h2>Freezer</h2>
+                    <ul id="freezerList" class="pantry-list"></ul>
+                </section>
+                <section id="pantrySection" class="transactions-list">
+                    <h2>Pantry</h2>
+                    <ul id="pantryList" class="pantry-list"></ul>
+                </section>
+            </div>
         </main>
     </div>
-
     <script src="script.js"></script>
 </body>
 
